# wasm-bpf

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  README_zh.md  codecov.yaml  flake.nix  go.mod
.github/scripts/: clang-format.sh
.github/workflows/: build-static-wasm-bpf.yml  c-cpp-lint.yml  c-cpp.yml  codeql-analysis.yml  deploy-asserts.yml  examples.yml  nix.yml  publish-example-images.yml  release-container.yml  rust.yml
cmake/: SourcesAndHeaders.cmake
docs/: build-image.md  build.md  podman.md
examples/: .gitignore  Makefile  README.md  bootstrap.c
examples/bootstrap/: Makefile  README.md  README_zh.md  bootstrap.bpf.c  bootstrap.c  bootstrap.wasm.h  dump.txt  libbpf-wasm.h
examples/bootstrap-libbpf-rs/: .gitignore  Cargo.toml  Makefile  README.md  build.rs
examples/bootstrap-libbpf-rs/src/: main.rs
examples/execve/: Makefile  execve.bpf.c  execve.c  execve.h  libbpf-wasm.h
examples/execve/go_wasm/: main.go
examples/execve/go_wasm/helper/: helper.go
examples/go-execve/: Makefile  README.md  execve.bpf.c  execve.h  go.mod  main.go
examples/go-execve/helper/: helper.go
examples/go-lsm/: Makefile  go.mod  lsm.bpf.c  main.go
examples/go-lsm/helper/: helper.go
examples/lsm/: Makefile  README.md  lsm.bpf.c  lsm.c  readme.md
examples/lsm-rmdir/: lsm.c  readme.MD
examples/lsm/go-lsm/: main.go
examples/opensnoop/: Makefile  README.md  opensnoop.bpf.c  opensnoop.c  opensnoop.h  trace_helpers.c
examples/runqlat/: Makefile  README.md  README_zh.md  core_fixes.bpf.h  libbpf-wasm.h  runqlat.bpf.c  runqlat.c  runqlat.h  trace_helpers.c
examples/rust-bootstrap/: .gitignore  Cargo.toml  Makefile  README.md  bootstrap.h
examples/rust-bootstrap/btf/: Makefile  event-def.c  event-def.wit  import.c
examples/rust-bootstrap/src/: main.rs
examples/rust-bootstrap/wasm-bpf-binding/: Cargo.toml
examples/rust-bootstrap/wit/: host.wit  import.wit
examples/rust-helloworld/: Cargo.toml  Makefile  README.md
examples/rust-helloworld/btf/: Makefile
examples/rust-helloworld/src/: lib.rs  main.rs
examples/rust-helloworld/wasm-bpf-binding/src/: binding.rs
examples/sockfiler/: sockfilter.bpf.c  sockfilter.c
examples/sockfilter/: Makefile  README.md  sockfilter.bpf.c  sockfilter.c
examples/sockops/: Makefile  README.md  sockops.bpf.c  sockops.c
examples/tcpconnlat-libbpf-rs/: Cargo.toml  Makefile  README.md  tcpconnlat.bpf.c  tcpconnlat.h
examples/tcpconnlat-libbpf-rs/src/: main.rs
examples/uprobe/: Makefile  README.md  target.c  uprobe.bpf.c  uprobe.c
examples/xdp/: Makefile  README.md  xdp.bpf.c  xdp.c
include/: bpf-api.h
runtime/: .gitignore  Cargo.toml  README.md
runtime/c-wrapper/: Cargo.toml
runtime/c-wrapper/src/: lib.rs
runtime/cli/: Cargo.toml  Makefile
runtime/cmd/: .gitignore  Cargo.toml  README.md
runtime/cmd/src/: main.rs
runtime/cpp/: CMakeLists.txt  Makefile
runtime/cpp/cmake/: SourcesAndHeaders.cmake  StandardSettings.cmake
runtime/cpp/include/: bpf-api.h
runtime/cpp/src/: main.cpp  wasm-bpf.cpp
runtime/cpp/test/: CMakeLists.txt  Makefile
runtime/rust/: .gitignore  Cargo.toml  README.md
runtime/rust/src/: log_format.rs  main.rs  state.rs  utils.rs
runtime/rust/src/func/: attach.rs  close.rs  fd_by_name.rs  load.rs  map_operate.rs  mod.rs  poll.rs  wrapper_poll.rs
runtime/wasm-bpf-rs/: .gitignore  Cargo.toml  Makefile
runtime/wasm-bpf-rs/src/: handle.rs  lib.rs  pipe.rs  runner.rs  state.rs  utils.rs
runtime/wasm-bpf-rs/src/bpf/: attach.rs  fd_by_name.rs  load.rs  map_operate.rs  mod.rs  poll.rs  wrapper_poll.rs
runtime/wasm-bpf-rs/src/func/: attach.rs  close.rs  map_operate.rs  poll.rs
runtime/wasm-bpf-rs/src/tests/: mod.rs
runtime/wasm-bpf-rs/tests/: abnormal_exit.wasm  bootstrap.wasm  custom_host_func.wasm  execve.wasm  go-execve.wasm  interruption_in_callback.wasm  interruption_in_hostfunc.wasm  long_sleep.wasm  lsm.wasm  normal_exit.wasm  opensnoop.wasm  runqlat.wasm  rust-bootstrap.wasm  sockfilter.wasm  sockops.wasm  tick.wasm
runtime/wasm-bpf-rs/tests/custom_host_func/: .gitignore  Makefile  README.md  custom_host_func.c
runtime/wasm-bpf-rs/tests/exit_code/: Makefile  README.md  long_sleep.c
runtime/wasm-bpf-rs/tests/interruption_in_callback/: .gitignore  Makefile  interruption_in_callback.c  libbpf-wasm.h
runtime/wasm-bpf-rs/tests/interruption_in_hostfunc/: Makefile  README.md  interruption_in_hostfunc.c
runtime/wasm-bpf-rs/tests/tick/: .gitignore  Makefile  README.md  tick.c
scripts/: clang-format.unused
src/: README.md  bpf-api.cpp  main.cpp  wasm-bpf.cpp
test/: CMakeLists.txt
test/src/: bpf_api_test.cpp  cJSON.h
test/wasm-apps/: binding.c
wasm-include/: libbpf-wasm.h
wasm-sdk/: README.md  libbpf-wasm.h
wasm-sdk/c/: README.md  libbpf-wasm.h
wasm-sdk/go/: go_wasm.go
wasm-sdk/go_sdk/: LICENSE  README.md  helper.go
wasm-sdk/rust/wasm-bpf-binding/: README.md
wasm-sdk/wasm-bpf-binding/: Cargo.toml
wasm-sdk/wasm-bpf-binding/src/: lib.rs
(+13 files in other folders)
