[package]
name = "rust-bootstrap"
version = "0.1.0"
edition = "2021"

[dependencies]
# wit-bindgen-guest-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", version = "0.3.0" }

wasm-bpf-binding = { path = "../../wasm-sdk/wasm-bpf-binding" }

wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "0fb4018" }
# [patch.crates-io]
# wit-component = {git = "https://github.com/bytecodealliance/wasm-tools", version = "0.5.0", rev = "9640d187a73a516c42b532cf2a10ba5403df5946"}
# wit-parser = {git = "https://github.com/bytecodealliance/wasm-tools", version = "0.5.0", rev = "9640d187a73a516c42b532cf2a10ba5403df5946"}


[features]
wasmtime = []
