[package]
name = "tcpconnlat-libbpf-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
plain = "0.2.3"
wasm-bpf-libbpf-rs = { git = "https://github.com/eunomia-bpf/wasm-bpf-guest-sdk-rust" }
